--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -8,7 +8,7 @@
 		German:"Aus Zwischenablage laden"
 		Dutch:"Gekopieerde data laden"
 		Spanish:"Cargar datos copiados"
-		Simplified_Chinese:"加载复制过的数据"
+		Simplified_Chinese:"加载复制的数据"
 		Portuguese:"Carregar dados copiados"
 		Japanese:"コピーしたデータを読み込む"
 	}
@@ -278,10 +278,12 @@
 	
 	"AI":{
 		Italian:"IA"
+		Simplified_Chinese:"电脑"
 	}
 	
 	"Human":{
 		Italian:"Umano"
+		Simplified_Chinese:"人类玩家"
 	}
 	
 	"Hotseat":{
@@ -290,17 +292,21 @@
 	
 	"User Id":{
 		Italian:"ID Utente"
+		Simplified_Chinese:"用户ID"
 	}
 	
 	"Click to copy":{
 		Italian:"Clicca per copiare"
+		Simplified_Chinese:"点击复制"
 	}
 	
 	"Username":{
 		Italian:"Nome utente"
+		Simplified_Chinese:"用户名"
 	}
 	
 	"Multiplayer":{
+		Simplified_Chinese:"多人游戏"
 		Italian:"Multigiocatore"
 	}
 	
@@ -429,7 +435,7 @@
 		German:"Spiel konnte nicht geladen werden"
 		Dutch:"Spel kon niet geladen worden"
 		Spanish:"Imposible cargar partida"
-		Simplified_Chinese:"无法读档"
+		Simplified_Chinese:"无法载入游戏"
 		Portuguese:"Não foi possivel carregar a partida salva"
 	}
 
@@ -465,7 +471,7 @@
 		German:"Gespeichert um"
 		Dutch:"Opgeslagen in"
 		Spanish:"Guardado en"
-		Simplified_Chinese:"保存在"
+		Simplified_Chinese:"存储时间"
 		Portuguese:"Salvo em"
 	}
 	
@@ -473,18 +479,22 @@
 	
 	"Load map":{
 		Italian:"Carica mappa"
+		Simplified_Chinese:"载入地图"
 	}
 	
 	"Are you sure you want to delete this map?":{
+		Simplified_Chinese:"你真想删除这张地图吗？"
 		Italian:"Vuoi davvero cancellare questa mappa?"
 	}
 	
 	"Upload":{
+		Simplified_Chinese:"上传"
 		Italian:"Carica"
-	}
+  }
 	
 	"Could not upload map!":{
 		Italian:"Impossibile caricare mappa!"
+		Simplified_Chinese:"无法上传地图！"
 	}
 	
 	////////////// Options
