Can no longer adopt policies after being defeated

--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -1452,6 +1452,10 @@
 		French:"Unités en terrain ouvert"
 		Russian:"юниты на открытой местности"
 	}
+	
+	"units in rough terrain":{
+	
+	}
 
 	"Barrage I":{
 		Italian:"Fuoco di Fila I"
