--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -71,36 +71,43 @@
 		Italian:"Numero di Città-Stato"
 		French:"Nombre de cité-état"
 		Simplified_Chinese:"城邦数量"
+		Russian:"Число городов-государств"
+		
 	}
 	
 	"No barbarians":{//it can be showed correct as usual, so I'm not translate it.
 		Italian:"Niente barbari"
 		French:"Pas de barbare"
 		//Simplified_Chinese:"无蛮族"
+		Russian:"Без варваров"
 	}
 
 	"Victory conditions": {
 		Italian:"Condizioni di Vittoria"
 		French: "Conditions de victoire"
 		Simplified_Chinese:"胜利方式"
+		Russian:"Условия победы"
 	}
 
 	"Scientific": {//it can be showed correct as usual in chinese, so I'm not translate it.
 		Italian:"Scientifica"
 		French: "Scientifique"
 		//Simplified_Chinese:"科技"
+		Russian:"Научная"
 	}
 
 	"Domination": {//it can be showed correct as usual in chinese, so I'm not translate it.
 		Italian:"Per Dominazione"
 		French: "Conquete"
 		//Simplified_Chinese:"征服"
+		Russian:"Завоевание"
 	},
 
 	"Cultural": {//it can be showed correct as usual in chinese, so I'm not translate it.
 		Italian:"Culturale"
 		French: "Culturelle"
 		//Simplified_Chinese:"文化"
+		Russian:"Культурная"
 	}
 	
 	// Map sizes
@@ -279,59 +286,72 @@
 	"AI":{
 		Italian:"IA"
 		Simplified_Chinese:"电脑"
+		Russian:"ИИ"
 	}
 	
 	"Human":{
 		Italian:"Umano"
 		Simplified_Chinese:"人类玩家"
+		Russian:"Человек"
 	}
 	
 	"Hotseat":{
 		Italian:"Hotseat"
+		Russian:"Хотсит"
 	}
 	
 	"User Id":{
 		Italian:"ID Utente"
 		Simplified_Chinese:"用户ID"
+		Russian:"ID игрока"
 	}
 	
 	"Click to copy":{
 		Italian:"Clicca per copiare"
 		Simplified_Chinese:"点击复制"
+		Russian:"Нажмите, чтобы скопировать"
 	}
 	
 	"Username":{
 		Italian:"Nome utente"
 		Simplified_Chinese:"用户名"
+		Russian:"Пользователь"
 	}
 	
 	"Multiplayer":{
 		Simplified_Chinese:"多人游戏"
 		Italian:"Multigiocatore"
+		Russian:"Сетевая игра"
 	}
 	
 	"Could not download game!":{
 		Italian:"Impossibile scaricare partita!"
+		Russian:"Невозможно загрузить игру!"
 	}
 	
 	"Could not upload game!":{
 		Italian:"Impossibile caricare partita"
+		Russian:"Невозможно отправить игру!"
 	}
 	
 	"Join Game":{
 		Italian:"Unisciti"
+		Russian:"Подключиться"
 	}
 	
 	"Invalid game ID!":{
 		Italian:"ID Partita non corretto"
+		Russian:"Некорректный ID игры!"
 	}
 	
 	"Copy User Id":{
 		Italian:"Copia ID Utente"
+		Russian:"Скопировать ID игрока"
 	}
 	
 	"Copy Game Id":{
 		Italian:"Copia ID Partita"
+		Russian:"Скопировать ID игры"
 	}
 	
 	/// tutorials for multiplayer
@@ -376,21 +396,25 @@
 	"Epic":{
 		Italian:"Epica"
 		Simplified_Chinese:"史诗"
+		Russian:"Эпическая"
 	}
 	
 	"Marathon":{
 		Italian:"Maratona"
 		Simplified_Chinese:"马拉松"
+		Russian:"Марафон"
 	}
 
 ////
 	
 	"It looks like we can't make a map with the parameters you requested!":{
 		Italian:"Sembra che i parametri da te impostati siano eccessivi per questa mappa!"
+		Russian:"Похоже, что мы не можем создать карту с нужными вам параметрами!"
 	}
 	
 	"Maybe you put too many players into too small a map?":{
 		Italian:"Forse hai inserito troppi giocatori o altri parametri?"
+		Russian:"Может, у вас слишком много игроков для такой небольшой карты?"
 	}
 	
 	
@@ -410,7 +434,7 @@
 
 	"Saved game name":{
 		Italian:"Nome del salvataggio"
-		Russian:"Название сохранённой игры"
+		Russian:"Имя сохранённой игры"
 		French:"Nom de la partie sauvegardée"
 		Romanian:"Numele jocului salvat"
 		German:"Name des gespeicherten Spiels"
@@ -425,6 +449,7 @@
 		French:"Copier dans le presse-papier"
 		Simplified_Chinese:"复制到剪贴板"
 		Portuguese:"Copiar" //means copy but it is correct because you can actually paste it as text
+		Russian:"Скопировать в буфер"
 	}
 
 	"Could not load game":{
@@ -480,21 +505,25 @@
 	"Load map":{
 		Italian:"Carica mappa"
 		Simplified_Chinese:"载入地图"
+		Russian:"Загрузить карту"
 	}
 	
 	"Are you sure you want to delete this map?":{
 		Simplified_Chinese:"你真想删除这张地图吗？"
 		Italian:"Vuoi davvero cancellare questa mappa?"
+		Russian:"Вы уверены в удалении этой карты?"
 	}
 	
 	"Upload":{
 		Simplified_Chinese:"上传"
 		Italian:"Carica"
-  }
+		Russian:"Отправить"
+  	}
 	
 	"Could not upload map!":{
 		Italian:"Impossibile caricare mappa!"
 		Simplified_Chinese:"无法上传地图！"
+		Russian:"Невозможно отправить карту!"
 	}
 	
 	////////////// Options
@@ -568,7 +597,7 @@
 	
 	"Worked tiles":{
 		Italian:"Celle sfruttate"
-		Russian:"Обработанные клетки"
+		Russian:"Обрабатываемые клетки"
 		French:"cases exploités"
 		Romanian:"celule lucrate"
 		German:"bearbeitete Felder"
@@ -598,6 +627,7 @@
 		Portuguese:"Cheque por unidades sem ordens",
 		German: "Untätige Einheiten anzeigen bei Rundenende"
 		French:"Vérifier les unités inactives"
+		Russian:"Найти незанятые юниты"
 	}
 
 	"Move units with a single tap":{
@@ -617,11 +647,13 @@
 	"Auto-assign city production":{
 		Italian:"Autoassegna produzione città"
 		Simplified_Chinese:"自动分配城市产能"
+		Russian:"Автопроизводство в городах"
 	}
 	
 	"Fontset":{
 		Italian:"Fontset"
 		Simplified_Chinese:"字体设置"
+		Russian:"Шрифты"
 	}
 
 }
